--- a/app/src/main/res/layout/view_trait_box.xml
+++ b/app/src/main/res/layout/view_trait_box.xml
@@ -68,6 +68,7 @@
         android:paddingRight="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:progressTint="@color/main_primary_dark"
         style="?android:attr/progressBarStyleHorizontal"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
