updated progress bar colors to match theme

--- a/app/src/main/res/layout/view_range_box.xml
+++ b/app/src/main/res/layout/view_range_box.xml
@@ -10,6 +10,7 @@
         android:paddingRight="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:progressTint="?attr/colorAccent"
         style="?android:attr/progressBarStyleHorizontal"
         app:layout_constraintTop_toTopOf="parent"/>
 
