--- a/app/src/main/res/layout/fragment_field_detail.xml
+++ b/app/src/main/res/layout/fragment_field_detail.xml
@@ -118,16 +118,20 @@
 
             <!-- BrAPI Specific -->
             <TextView style="@style/TextViewStyle.Bold"
+                android:id="@+id/brapiDetailsTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/fields_brapi_details"
                 android:textSize="16sp"
-                android:layout_marginBottom="8dp"/>
+                android:layout_marginBottom="8dp"
+                android:visibility="gone"/>
 
             <RelativeLayout
+                android:id="@+id/brapiDetailsRelativeLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp">
+                android:layout_marginBottom="16dp"
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/entryTypeTextView"
