--- a/app/src/main/res/layout/list_item_field.xml
+++ b/app/src/main/res/layout/list_item_field.xml
@@ -10,18 +10,18 @@
 
     <RadioButton
         android:id="@+id/fieldRadio"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|end"
         android:checked="false"
         android:scaleX="1.1"
         android:scaleY="1.1"
-        android:layout_marginEnd="15dp"/>
+        android:layout_marginRight="15dp"/>
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_weight="1">
 
         <TextView style="@style/TextViewStyle.Bold"
@@ -33,6 +33,77 @@
             android:singleLine="true"
             tools:text="field_sample"/>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView style="@style/TextViewStyle.Sub"
+                android:id="@+id/field_import_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:singleLine="true"
+                tools:text="2022-01-08"/>
+
+            <View
+                android:id="@+id/spacer5"
+                android:layout_width="25dp"
+                android:layout_height="1dp" />
+
+            <TextView style="@style/TextViewStyle.Sub"
+                android:id="@+id/field_edit_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:singleLine="true"
+                tools:text="2022-07-17"/>
+
+            <View
+                android:id="@+id/spacer6"
+                android:layout_width="25dp"
+                android:layout_height="1dp" />
+
+            <TextView style="@style/TextViewStyle.Sub"
+                android:id="@+id/field_export_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:singleLine="true"
+                tools:text="2022-07-23"/>
+
+        </LinearLayout>
+
+        <TextView style="@style/TextViewStyle.Sub"
+            android:id="@+id/field_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:minWidth="40dp"
+            android:singleLine="true"
+            android:textSize="@dimen/text_size_small" />
+
+        <TextView
+            android:id="@+id/observationLevelLbl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:minWidth="40dp"
+            android:singleLine="true"
+            android:textSize="@dimen/text_size_small"/>
+
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/popupMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical|right"
+        android:paddingTop="3dp"
+        android:paddingRight="20dp"
+        android:paddingLeft="10dp"
+        android:src="@drawable/ic_more_vert"
+        android:scaleType="fitCenter"
+        android:contentDescription="@string/list_item_field_popup_menu_content_description" />
 
 </LinearLayout>
