trait info displayed in search results

--- a/app/src/main/res/layout/listitem_search_results.xml
+++ b/app/src/main/res/layout/listitem_search_results.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:id="@+id/search_results_list_parent">
 
     <TextView
         android:id="@+id/range"
