--- a/app/src/main/res/layout/dialog_search_results.xml
+++ b/app/src/main/res/layout/dialog_search_results.xml
@@ -7,7 +7,8 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:id="@+id/search_results_parent">
 
         <TextView style="@style/TextViewStyle.Bold.Title"
             android:id="@+id/range"
