--- a/app/src/main/res/layout/view_trait_box.xml
+++ b/app/src/main/res/layout/view_trait_box.xml
@@ -47,6 +47,22 @@
         app:layout_constraintStart_toEndOf="@id/traitLeft" />
 
     <TextView
+        android:id="@+id/traitTypeTv"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:gravity="center"
+        android:text=""
+        android:textColor="#000000"
+        android:textSize="@dimen/text_size_large"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@id/traitRight"
+        app:layout_constraintBottom_toTopOf="@id/traitDetails"
+        app:layout_constraintStart_toEndOf="@id/traitLeft"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
         android:id="@+id/traitDetails"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
