--- a/app/src/main/res/layout/list_item_field_recycler.xml
+++ b/app/src/main/res/layout/list_item_field_recycler.xml
@@ -27,4 +27,13 @@
         android:singleLine="true"
         tools:text="field_sample"/>
 
+    <TextView style="@style/TextViewStyle.Sub"
+        android:id="@+id/fieldCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:minWidth="40dp"
+        android:singleLine="true"
+        android:textSize="@dimen/text_size_small" />
+
 </LinearLayout>
