Add upload file functionality

--- a/app/src/main/res/xml/preferences_beta.xml
+++ b/app/src/main/res/xml/preferences_beta.xml
@@ -12,4 +12,10 @@
         android:defaultValue="false"
         android:icon="@drawable/ic_tb_field_mic_on"/>
 
+    <Preference
+        android:icon="@drawable/ic_pref_database_export"
+        android:key="pref_beta_upload_files"
+        android:summary="@string/pref_beta_upload_files_summary"
+        android:title="@string/pref_beta_upload_files" />
+
 </PreferenceScreen>
