--- a/app/src/main/res/layout/activity_fields.xml
+++ b/app/src/main/res/layout/activity_fields.xml
@@ -8,10 +8,9 @@
     android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/field_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
         android:minHeight="?attr/actionBarSize"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,20 +21,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-<!--        <ListView-->
-<!--            android:id="@+id/myList"-->
-<!--            android:layout_width="fill_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="5dp"-->
-<!--            android:choiceMode="singleChoice"-->
-<!--            android:dividerHeight="1px"-->
-<!--            android:minHeight="48dp"-->
-<!--            android:padding="3dp" />-->
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/fieldRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="5dp" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fieldRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="5dp" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </LinearLayout>
