--- a/app/src/main/res/layout/list_item_field_recycler.xml
+++ b/app/src/main/res/layout/list_item_field_recycler.xml
@@ -1,48 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/statelist_item_background"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp">
-
-    <CheckBox
-        android:id="@+id/fieldCheckBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minHeight="48dp"
-        android:minWidth="48dp"
-        android:padding="8dp" />
+    android:paddingTop="12dp"
+    android:paddingBottom="12dp">
 
     <ImageView
         android:id="@+id/fieldSourceIcon"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginEnd="12dp"/>
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_margin="6dp"/>
 
-    <TextView
-        style="@style/TextViewStyle.Bold"
-        android:id="@+id/fieldName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ellipsize="end"
-        android:gravity="start"
-        android:singleLine="true"
-        android:textSize="@dimen/text_size_large"
-        tools:text="field_sample"/>
+    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/container_inner_item"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_centerVertical="true">
 
-    <TextView
-        style="@style/TextViewStyle.Sub"
-        android:id="@+id/fieldCount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:gravity="start"
-        android:minWidth="40dp"
-        android:singleLine="true"
-        android:textSize="@dimen/text_size_small" />
+        <TextView
+            style="@style/TextViewStyle.Bold"
+            android:id="@+id/fieldName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:gravity="start"
+            android:singleLine="true"
+            android:textSize="@dimen/text_size_large"
+            tools:text="field_sample"/>
+
+        <TextView
+            style="@style/TextViewStyle.Sub"
+            android:id="@+id/fieldCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:gravity="start"
+            android:minWidth="40dp"
+            android:singleLine="true"
+            android:textSize="@dimen/text_size_small" />
+
+    </LinearLayout>
 
 </LinearLayout>
