--- a/app/src/main/res/values/styles_preferences.xml
+++ b/app/src/main/res/values/styles_preferences.xml
@@ -6,6 +6,7 @@
         <item name="android:windowFullscreen">false</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowSoftInputMode">stateUnchanged</item>
+        <item name="windowActionBarOverlay">true</item>
 
         <item name="colorPrimary">?attr/fb_color_primary</item>
         <item name="colorPrimaryDark">?attr/fb_color_primary_dark</item>
