convert beta settings to experimental settings

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -54,9 +54,9 @@
         app:fragment="com.fieldbook.tracker.preferences.DatabasePreferencesFragment" />
 
     <Preference
-        android:icon="@drawable/ic_beta"
-        android:key="pref_key_beta_settings"
-        android:title="@string/preferences_beta_title"
-        app:fragment="com.fieldbook.tracker.preferences.BetaPreferencesFragment" />
+        android:icon="@drawable/ic_experimental"
+        android:key="pref_key_experimental_settings"
+        android:title="@string/preferences_experimental_title"
+        app:fragment="com.fieldbook.tracker.preferences.ExperimentalPreferencesFragment" />
 
 </androidx.preference.PreferenceScreen>
