--- a/app/src/main/res/xml/preferences_experimental.xml
+++ b/app/src/main/res/xml/preferences_experimental.xml
@@ -3,20 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory
-        android:key="stable_experimental_settings"
+        android:key="experimental_settings_stable"
         android:title="@string/preferences_experimental_stable_title"
-        app:iconSpaceReserved="false"/>
-
-    <PreferenceCategory
-        android:key="brapi_oidc_settings"
-        android:title="@string/preferences_experimental_beta_title"
         app:iconSpaceReserved="false">
 
         <CheckBoxPreference android:key="com.tracker.fieldbook.preferences.keys.repeated_values"
             android:title="@string/pref_experimental_repeated_values_title"
             android:summary="@string/pref_experimental_repeated_values_summary"
             android:defaultValue="false"
-            android:icon="@drawable/ic_experimental"/>
+            android:icon="@drawable/ic_repeated_measures"/>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="experimental_settings_beta"
+        android:title="@string/preferences_experimental_beta_title"
+        app:iconSpaceReserved="false">
 
         <CheckBoxPreference android:key="com.tracker.fieldbook.preferences.keys.enable_field_audio"
             android:title="@string/pref_experimental_enable_field_audio_title"
@@ -27,7 +29,7 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-    android:key="brapi_oidc_settings"
+    android:key="experimental_settings_alpha"
     android:title="@string/preferences_experimental_alpha_title"
     app:iconSpaceReserved="false"/>
 
