--- a/app/src/main/res/layout/list_item_trait_parameter_default_toggle_value.xml
+++ b/app/src/main/res/layout/list_item_trait_parameter_default_toggle_value.xml
@@ -22,7 +22,7 @@
         android:id="@+id/list_item_trait_parameter_til"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:errorEnabled="true">
+        app:errorEnabled="false">
 
         <ToggleButton
             android:id="@+id/dialog_new_trait_default_toggle_btn"
