--- a/app/src/main/res/layout/list_item_trait_parameter_numeric.xml
+++ b/app/src/main/res/layout/list_item_trait_parameter_numeric.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:endIconMode="custom"
-        app:errorEnabled="true">
+        app:errorEnabled="false">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/list_item_trait_parameter_numeric_et"
