refactored all alert dialog to support lib ensured all alert dialogs use alert style added window border to all alert dialogs added window border to pop up menus added activity dialog class for Search/FileExplorer activities with window border Added BorderedDialogFragment for all DialogFragments to have a border Added borders to overflow menu items

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -150,6 +150,11 @@
         <item name="colorAccent">?attr/fb_color_accent</item>
         <item name="android:colorAccent">?attr/fb_color_accent</item>
 
+        <item name="android:popupMenuStyle">@style/PopUpMenuStyle.Base</item>
+    </style>
+
+    <style name="PopUpMenuStyle.Base">
+        <item name="android:popupBackground">@drawable/cell</item>
     </style>
 
 </resources>
