--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -62,7 +62,7 @@
         <item name="spinnerDropDownItemStyle">@style/SpinnerDropDownItemStyle</item>
         <item name="spinnerStyle">@style/SpinnerStyle</item>
         <item name="dropDownListViewStyle">@style/DropDownListViewStyle</item>
-        <item name="android:popupMenuStyle">@style/PopUpMenuStyle</item>
+        <item name="android:popupMenuStyle">@style/PopupMenuStyle</item>
         <item name="android:spinnerItemStyle">@style/SpinnerItemStyle</item>
         <item name="android:dropDownSpinnerStyle">@style/DropDownSpinnerStyle</item>
         <item name="android:spinnerDropDownItemStyle">@style/SpinnerDropDownItemStyle</item>
@@ -142,6 +142,7 @@
         <item name="fb_value_altered_color">@color/high_contrast_value_altered_color</item>
         <item name="fb_color_text_secondary">@color/high_contrast_color_text_secondary</item>
         <item name="fb_button_color_pressed">@color/high_contrast_button_color_pressed</item>
+        <item name="fb_button_color_normal">@color/TRANSPARENT</item>
         <item name="fb_icon_fill_tint">@color/high_contrast_primary_dark</item>
 
         <item name="colorPrimary">?attr/fb_color_primary_dark</item>
@@ -149,12 +150,6 @@
         <item name="colorPrimaryVariant">?attr/fb_color_primary</item>
         <item name="colorAccent">?attr/fb_color_accent</item>
         <item name="android:colorAccent">?attr/fb_color_accent</item>
-
-        <item name="android:popupMenuStyle">@style/PopUpMenuStyle.Base</item>
-    </style>
-
-    <style name="PopUpMenuStyle.Base">
-        <item name="android:popupBackground">@drawable/cell</item>
     </style>
 
 </resources>
