overall high contrast theme enhancement added high contrast rounded borders for image buttons added high contrast border to regular buttons added high contrast seekbar colors removed button background color for high contrast theme

--- a/app/src/main/res/layout/trait_counter.xml
+++ b/app/src/main/res/layout/trait_counter.xml
@@ -18,7 +18,7 @@
             android:id="@+id/minusBtn"
             android:layout_width="75dp"
             android:layout_height="75dp"
-            android:background="@drawable/custom_round_button"
+            android:background="?fb_round_button_background"
             android:gravity="center|center_vertical"
             android:text="-1"
             android:textSize="@dimen/text_size_large"
@@ -36,7 +36,7 @@
             android:id="@+id/addBtn"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:background="@drawable/custom_round_button"
+            android:background="?fb_round_button_background"
             android:gravity="center"
             android:text="+1"
             app:layout_constraintBottom_toBottomOf="parent"
