--- a/app/src/main/res/drawable/three_state_seek_bar_progress.xml
+++ b/app/src/main/res/drawable/three_state_seek_bar_progress.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke
-        android:color="#42000000"
+        android:color="?fb_seek_bar_color"
         android:width="3dp" />
 
     <solid android:color="#00FFFFFF"/>
