--- a/app/src/main/res/drawable/three_state_seek_bar_thumb.xml
+++ b/app/src/main/res/drawable/three_state_seek_bar_thumb.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#90654321"/>
+    <solid android:color="?fb_seek_bar_thumb_color" />
 
     <size
         android:height="42dp"
