--- a/app/src/main/res/layout/trait_percent.xml
+++ b/app/src/main/res/layout/trait_percent.xml
@@ -18,7 +18,7 @@
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
         android:paddingBottom="10dp"
-        android:progressDrawable="@drawable/custom_seek_bar"
+        android:progressDrawable="?fb_seek_bar"
         android:thumb="@drawable/custom_seek_bar_thumb"
         android:thumbOffset="0dp"/>
 </com.fieldbook.tracker.traits.PercentTraitLayout>
