--- a/app/src/main/res/layout/trait_usb_camera.xml
+++ b/app/src/main/res/layout/trait_usb_camera.xml
@@ -47,7 +47,7 @@
 
         <ImageButton
             android:contentDescription="@string/trait_usb_camera_capture_content_description"
-            android:background="@drawable/circle_background"
+            android:background="?fb_round_button_background"
             android:id="@+id/usb_camera_fragment_capture_btn"
             android:layout_width="64dp"
             android:layout_height="64dp"
@@ -61,7 +61,7 @@
         <ImageButton
             android:contentDescription="@string/trait_usb_camera_zoom_in_content_description"
             android:src="@drawable/ic_plus"
-            android:background="@drawable/circle_background"
+            android:background="?fb_round_button_background"
             android:id="@+id/usb_camera_fragment_plus_btn"
             android:layout_width="48dp"
             android:layout_height="48dp"
@@ -75,7 +75,7 @@
         <ImageButton
             android:contentDescription="@string/trait_usb_camera_zoom_out_content_description"
             android:src="@drawable/minus"
-            android:background="@drawable/circle_background"
+            android:background="?fb_round_button_background"
             android:id="@+id/usb_camera_fragment_minus_btn"
             android:layout_width="48dp"
             android:layout_height="48dp"
