--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,18 +28,31 @@
         <item name="fb_color_indeterminate_progress_bar">@color/main_primary_dark</item>
         <item name="fb_spinner_focused">@color/main_color_accent</item>
         <item name="fb_spinner_selected">@color/main_primary_transparent</item>
-        <item name="fb_trait_percent_background_center_color">@color/main_trait_percent_background_center_color</item>
-        <item name="fb_trait_percent_background_start_end_color">@color/main_trait_percent_background_start_end_color</item>
+        <item name="fb_trait_percent_background_center_color">
+            @color/main_trait_percent_background_center_color
+        </item>
+        <item name="fb_trait_percent_background_start_end_color">
+            @color/main_trait_percent_background_start_end_color
+        </item>
         <item name="fb_trait_percent_start_color">@color/main_trait_percent_start_color</item>
         <item name="fb_trait_percent_stroke_color">@color/main_trait_percent_stroke_color</item>
         <item name="fb_value_saved_color">@color/main_value_saved_color</item>
         <item name="fb_value_altered_color">@color/main_value_altered_color</item>
-        <item name="fb_trait_categorical_button_press_color">@color/main_trait_categorical_button_press_color</item>
+        <item name="fb_trait_categorical_button_press_color">
+            @color/main_trait_categorical_button_press_color
+        </item>
         <item name="fb_button_text_color">@color/main_button_text_color</item>
         <item name="fb_button_color_normal">@color/main_button_color_normal</item>
         <item name="fb_button_color_pressed">@color/main_button_color_pressed</item>
         <item name="fb_subheading_color">@color/main_subheading_color</item>
         <item name="fb_color_text_secondary">@color/main_color_text_secondary</item>
+        <item name="fb_round_button_background">@drawable/custom_round_button</item>
+        <item name="fb_round_button_background_with_indicator">
+            @drawable/selector_round_button_background
+        </item>
+        <item name="fb_seek_bar_color">@color/main_color_seekbar</item>
+        <item name="fb_seek_bar_thumb_color">@color/main_color_seekbar_thumb</item>
+        <item name="fb_seek_bar">@drawable/custom_seek_bar</item>
 
         <!-- these are used in material design components -->
         <item name="android:textColorPrimary">?attr/fb_color_text_dark</item>
@@ -131,25 +144,45 @@
         <item name="fb_color_indeterminate_progress_bar">?attr/fb_color_primary_dark</item>
         <item name="fb_spinner_focused">@color/high_contrast_color_accent</item>
         <item name="fb_spinner_selected">@color/high_contrast_primary_transparent</item>
-        <item name="fb_trait_percent_background_center_color">@color/high_contrast_trait_percent_background_center_color</item>
-        <item name="fb_trait_percent_background_start_end_color">@color/high_contrast_trait_percent_background_start_end_color</item>
-        <item name="fb_trait_percent_start_color">@color/high_contrast_trait_percent_start_color</item>
-        <item name="fb_trait_percent_stroke_color">@color/high_contrast_trait_percent_stroke_color</item>
+        <item name="fb_trait_percent_background_center_color">
+            @color/high_contrast_trait_percent_background_center_color
+        </item>
+        <item name="fb_trait_percent_background_start_end_color">
+            @color/high_contrast_trait_percent_background_start_end_color
+        </item>
+        <item name="fb_trait_percent_start_color">@color/high_contrast_trait_percent_start_color
+        </item>
+        <item name="fb_trait_percent_stroke_color">@color/high_contrast_trait_percent_stroke_color
+        </item>
         <item name="fb_trait_boolean_false_color">@color/high_contrast_primary_dark</item>
         <item name="fb_trait_boolean_true_color">@color/high_contrast_primary_dark</item>
-        <item name="fb_trait_categorical_button_press_color">@color/high_contrast_trait_categorical_button_press_color</item>
+        <item name="fb_trait_categorical_button_press_color">
+            @color/high_contrast_trait_categorical_button_press_color
+        </item>
         <item name="fb_value_saved_color">@color/high_contrast_value_saved_color</item>
         <item name="fb_value_altered_color">@color/high_contrast_value_altered_color</item>
         <item name="fb_color_text_secondary">@color/high_contrast_color_text_secondary</item>
         <item name="fb_button_color_pressed">@color/high_contrast_button_color_pressed</item>
         <item name="fb_button_color_normal">@color/TRANSPARENT</item>
         <item name="fb_icon_fill_tint">@color/high_contrast_primary_dark</item>
+        <item name="fb_round_button_background">@drawable/high_contrast_round_button</item>
+        <item name="fb_round_button_background_with_indicator">
+            @drawable/high_contrast_round_button
+        </item>
+        <item name="fb_seek_bar_color">@color/high_contrast_primary_dark</item>
+        <item name="fb_seek_bar_thumb_color">@color/high_contrast_primary_dark</item>
 
         <item name="colorPrimary">?attr/fb_color_primary_dark</item>
         <item name="colorPrimaryDark">?attr/fb_color_primary_dark</item>
         <item name="colorPrimaryVariant">?attr/fb_color_primary</item>
         <item name="colorAccent">?attr/fb_color_accent</item>
         <item name="android:colorAccent">?attr/fb_color_accent</item>
+
+        <item name="buttonStyle">@style/ButtonStyle.HighContrast</item>
+        <item name="imageButtonStyle">@style/ButtonStyle.HighContrast</item>
+
+        <item name="fb_seek_bar">@drawable/high_contrast_seek_bar</item>
+
     </style>
 
 </resources>
